@@ -22,8 +22,9 @@
 
     .content
       %hr
-        = t('views.call_flows._register_step_template.label.reminder_group') + ":"
-        %select{ko(options: 'reminder_groups', value: 'reminder_group')}
+        %label{ko(css: {orange: :is_reminder_group_invalid})}= t('views.call_flows._register_step_template.label.reminder_group') + ":"
+        %span{ko(css:{ alert: :is_reminder_group_invalid })}
+        %select{ko(options: 'reminder_groups', value: 'reminder_group', optionsCaption: "'#{t('views.call_flows._register_step_template.label.select')}'")}
       %br/
 
     .bottom-actions
